# Alama-AutonomousLearningAndMulti-AgentArchitecture

./: Alama-Low-Level-Design-v1.0.md  Alama-Production-Architecture-v1.1.md  README.md
apps/web/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
compose/: README.md  docker-compose.yml  run-local-core.ps1  run-vertical-slice.ps1
contracts/openapi/: api-gateway.openapi.yaml  audit-service.openapi.yaml  bff-web.openapi.yaml  identity-service.openapi.yaml  knowledge-service.openapi.yaml  model-gateway.openapi.yaml  notification-service.openapi.yaml  policy-service.openapi.yaml  repository-service.openapi.yaml  retrieval-service.openapi.yaml  task-service.openapi.yaml  tool-gateway.openapi.yaml  usage-service.openapi.yaml
evals/: README.md
evals/agent/: v1.json
evals/cost/: v1.json
evals/retrieval/: v1.json
evals/safety/: v1.json
fixtures/auth-bug-repo/: README.md  pyproject.toml
fixtures/auth-bug-repo/src/: __init__.py  auth.py
services/api-gateway/: Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/audit-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
services/audit-service/migrations/: env.py  script.py.mako
services/audit-service/migrations/versions/: 0001_audit_initial.py
services/audit-service/src/audit_service/: __init__.py  config.py  container.py  main.py
services/audit-service/src/audit_service/adapters/: memory.py
services/audit-service/src/audit_service/adapters/http/: __init__.py  routes.py  schemas.py
services/audit-service/src/audit_service/adapters/persistence/: __init__.py  models.py
services/audit-service/src/audit_service/application/: __init__.py  dto.py  export.py  ingest.py  query.py
services/audit-service/src/audit_service/domain/: __init__.py  integrity.py  models.py  repositories.py
services/audit-service/tests/: test_audit_service.py
services/bff-web/: Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  schema.graphql
services/bff-web/src/bff_web/: __init__.py  auth_context.py  config.py  container.py  dataloaders.py  main.py  mappers.py
services/bff-web/src/bff_web/clients/: __init__.py  memory.py  ports.py  slice_clients.py
services/bff-web/src/bff_web/schema/: __init__.py  schema.py  types.py
services/bff-web/tests/: test_bff_web.py
services/identity-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/knowledge-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
services/model-gateway/: Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/notification-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
services/policy-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/repository-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/retrieval-service/: Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/task-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
services/tool-gateway/: Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/usage-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
workers/agent-worker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
workers/agent-worker/src/agent_worker/: __init__.py  config.py  container.py  main.py
workers/agent-worker/src/agent_worker/activities/: __init__.py  execute.py  plan.py  verify.py
workers/agent-worker/src/agent_worker/adapters/: __init__.py  gateways.py
workers/agent-worker/src/agent_worker/agents/: __init__.py  coder.py  planner.py  reviewer.py  security.py  tester.py
workers/agent-worker/src/agent_worker/application/: __init__.py  context_builder.py
workers/agent-worker/src/agent_worker/domain/: __init__.py  ports.py
workers/agent-worker/src/agent_worker/protocols/: __init__.py  artifacts.py  bus.py
workers/agent-worker/src/agent_worker/workflows/: __init__.py  agent_workflow.py  runtime.py
workers/agent-worker/tests/: test_agent_workflow.py
workers/evaluator-worker/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
workers/indexing-worker/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
workers/indexing-worker/migrations/: env.py  script.py.mako
workers/indexing-worker/migrations/versions/: 0001_index_meta_initial.py
workers/indexing-worker/src/indexing_worker/: __init__.py  config.py  container.py  main.py
workers/indexing-worker/src/indexing_worker/adapters/persistence/: __init__.py  memory.py  models.py
workers/indexing-worker/src/indexing_worker/chunking/: __init__.py  semantic_chunker.py
workers/indexing-worker/src/indexing_worker/domain/: __init__.py  classifier.py  incremental.py  models.py  ports.py
workers/indexing-worker/src/indexing_worker/parsers/: __init__.py  tree_sitter_facade.py
workers/indexing-worker/src/indexing_worker/pipeline/: __init__.py  indexing_pipeline.py
workers/indexing-worker/src/indexing_worker/publishers/: __init__.py  index_publisher.py
workers/indexing-worker/tests/: test_indexing_pipeline.py
(+293 files in other folders)
