[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "audit-service"
version = "0.1.0"
description = "Alama audit service: append-only events, integrity chain, query, export."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Alama Platform Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.scripts]
audit-service = "audit_service.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/audit_service/adapters/http/routes.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["audit_service"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["asyncpg.*", "uvicorn.*", "alama_common.*"]
ignore_missing_imports = true
