[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bff-web"
version = "0.1.0"
description = "Alama Web BFF: GraphQL composition over cell REST services."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Alama Platform Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "strawberry-graphql[fastapi]>=0.243.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.scripts]
bff-web = "bff_web.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/bff_web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["bff_web"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["uvicorn.*", "alama_common.*", "strawberry.*"]
ignore_missing_imports = true
