[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agent-worker"
version = "0.1.0"
description = "Alama agent-worker: Temporal-class Planner→Coder→Tester control loop."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Alama Platform Team" }]
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.scripts]
agent-worker = "agent_worker.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agent_worker"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["alama_common.*"]
ignore_missing_imports = true
